@@ -1,4 +1,3 @@
-Test
 Version 5.2.8
 - fixed situation where TreatTinyAsBoolean had no effect with default database character set to UTF8
     (bug#46205)
@@ -14,6 +13,8 @@ Version 5.2.8
 - fixed GetSByte method to actually return an sbyte  (bug #46620)
 - changed MySqlStream.Read to throw an exception if the stream end is reached.  This is not ideal
   but we can't change it too much here in 5.2.8.  We'll look at a bigger change in 6.2. (bug #45978)
+- adding a pretty nasty hack to enable output of a refresh select on the end of our insert
+  statements when they are generated by the TableAdapter config wizard (bug #37865)
 
 Version 5.2.7 7/13/09
 - fixed procedure parameters collection so that an exception is thrown if we can't get the 
